--- a/lesson3/media.html
+++ b/lesson3/media.html
@@ -16,5 +16,6 @@
         <source src="video.avi" type="avi">
     </video> <br>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QxMSzhH3zdE?si=rNSoyOKL_dVPAWbD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3shH5alqJBg?si=I2Sp91wt9CbYjf74" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
